[package]
name = "arc-interner"
description = "An interner that deallocates unused values"
homepage = "https://github.com/ryzhyk/arc-interner"
version = "0.7.0"
authors = ["Leonid Ryzhyk <lryzhyk@vmware.com>", "Alex Hornby <alex@hornby.org.uk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ryzhyk/arc-interner"
readme = "README.md"
keywords = ["intern", "interner", "interning"]

[dependencies]
ahash = "0.8.5"
dashmap = "4.0.2"
once_cell = "1.3"
serde = "1.0"
